src/index.css
/* ... */
.p-run-list__row--header {
  font-weight: bold;
  text-align: center;
}
.p-run-list__cell--result-requests {
  display: flex;
  align-items: center;
  column-gap: 0.3125em;
}
.p-run-list__cell--id {
  width: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
}
.p-run-list__cell--result {
  width: var(--result-width);
}
.p-run-list__row--header .p-run-list__cell--result {
  display: flex;
  column-gap: 1em;
  justify-content: center;
}
.p-run-list__cell--requests {
  width: calc(var(--dot-size) * 13);
}

.c-log__processing {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--overlay);
  color: var(--white);
  z-index: 999;
  display: flex;
  justify-content: center;
  align-items: center;
}

.p-map {
  background: var(--f-brown);
  position: sticky;
  top: 0;
  z-index: 999;
}

.p-map__inner {
  overflow-x: auto;
  position: relative;
  transform: rotate(0);
}

.c-act__title {
  position: absolute;
  top: 0;
  left: 0;
  margin: 0.2em 0.5em;
  font-size: 1.2em;
  color: var(--f-black);
}

.p-holdings {
  position: sticky;
  top: 0;
  z-index: 999;
  min-height: var(--map-height);
  max-height: calc(100vh - var(--control-height));
  box-shadow: 0 0.5em 0.5em -0.5em var(--shadow);
  background: var(--white);
  display: flex;
  flex-direction: column;
  --entity-column-gap: 0.6em;
}
.p-holdings__inner {
  padding: 0.5em;
  overflow-y: scroll;
  height: 100%;
  scrollbar-width: thin;
}
.p-holdings__resizer {
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: 6px;
  justify-self: flex-end;
  cursor: row-resize;
  resize: vertical;
  position: relative;
  display: flex;
  justify-content: center;
  touch-action: none;
  height: 3px;
  --color: var(--gray);
  --visible: hidden;
  background: var(--color);
}
.p-holdings__resizer:before, .p-holdings__resizer:after {
  content: '';
  border: 1px solid var(--color);
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  position: absolute;
  pointer-events: none;
  visibility: var(--visible);
}
.p-holdings__resizer:before {
  bottom: 100%;
  transform: rotate(-135deg);
}
.p-holdings__resizer:after {
  top: 100%;
  transform: rotate(45deg);
}
.p-holdings__resizer:hover {
  --color: var(--green);
  --visible: visible;
}
.p-holdings__resizer:active {
  --color: var(--orange);
  --visible: visible;
}

.p-holdings__line {
  display: flex;
  align-items: center;
  column-gap: 0.5em;
  font-size: 0.8em;
}
.p-holdings__act {
  margin: 0;
}
.p-holdings__level {
  margin: 0;
}
.p-holdings__counts {
  display: flex;
  justify-content: space-between;
}

.p-holdings__entities {
  display: flex;
  justify-content: space-between;
}
.p-holdings__cards {
  --n: 6;
  flex-basis: calc(var(--n) * (var(--entity-width) + var(--entity-column-gap) + var(--entity-border) * 2) - var(--entity-column-gap));
}
.p-holdings__exhibits {
  --n: 2;
  flex-basis: calc(var(--n) * (var(--entity-width) + var(--entity-column-gap) + var(--entity-border) * 2) - var(--entity-column-gap));
}

.p-map__svg {
  display: block;
}

.c-map-icon {
  position: fixed;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c-map-icon--boss {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c-map-icon__visited {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1;
}

.c-map-icon__bg {
  top: 0;
  left: 0;
  position: absolute;
  z-index: -1;
}

.c-map-icon__bg--active {
  background: var(--f-white);
  border-radius: 50%;
}

.p-summary, .p-stations {
  padding-left: var(--padding-inner);
  padding-right: var(--padding-inner);
}
.p-summary {
  padding-bottom: calc(100vh - var(--control-height));
}
.p-summary__head {
  display: flex;
  gap: 1em;
  flex-wrap: wrap;
}
.p-summary__settings {
  padding: 0.2em 0;
}
.p-summary__line {
  display: flex;
  gap: 0.2em 0.5em;
}

.p-mods {
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  gap: 0.2em 0.5em;
}
.p-mod {
  flex-basis: calc((100% - 0.5em) / 2);
  display: grid;
  grid-auto-rows: max-content;
  justify-content: space-between;
}
.p-mod__guid {
  font-size: 0.5em;
}
.p-mod > * {
  margin: 0;
}
.p-mod__version {
  grid-row: 1 / span 2;
  grid-column: 2;
  align-self: center;
}

.p-stations {
  margin-bottom: var(--control-height);
  flex: 1;
}
.p-station {
  padding: 1em 0;
}

.p-station--last {
  margin-bottom: 0;
  padding-bottom: calc(100vh - var(--map-height));
  box-sizing: border-box;
}

.p-station__head {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  column-gap: 0.3125em;
}
.p-station__level {
  margin: 0;
  width: 4.5em;
}
.p-station__statuses {
  display: flex;
  flex-wrap: wrap;
}
.p-station__status {
  display: flex;
  align-items: center;
}

.p-station__body {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em 1em;
}

.c-station__stats {
  display: flex;
  align-items: flex-start;
  column-gap: 0.5em;
  margin: 0.5em 0;
}
.c-station__rounds, .c-station__money {
  display: flex;
  align-items: center;
}
.p-entity__label {
  flex-shrink: 0;
}
.p-entity__cards {
  display: flex;
}

.p-entity {
  display: flex;
  align-items: flex-start;
  margin: 0.5em 0;
}

.p-entity__label {
  display: flex;
  align-items: center;
}

.p-entity__symbol--Add {
  color: var(--green);
}
.p-entity__symbol--Remove {
  color: var(--red);
}
.p-entity__symbol--Upgrade {
  color: var(--orange);
}
.p-entity__symbol--Use {
  color: var(--purple);
}

.c-status {
  position: relative;
  line-height: 1em;
}
.c-status__change {
  position: absolute;
  font-size: 0.8em;
  right: 0;
  bottom: 100%;
}
.c-status__change--positive {
  color: var(--green);
}
.c-status__change--negative {
  color: var(--red);
}

.p-control {
  position: fixed;
  bottom: 0;
  left: 0;
  background: var(--light-gray);
  height: var(--control-height);
  width: 100%;
  z-index: 999;
}
.p-control__inner {
  display: flex;
  flex-wrap: nowrap;
  height: 100%;
  padding: 0 var(--control-gap);
  column-gap: var(--control-gap);
}
/* ... */

